! OK, Nao, I'm sorry, but I couldn't let this one go on any more. Yes, it adds 140 bytes or thereabouts to the MAIN CSS file, but I couldn't figure out a shorter way of doing it (didn't bench it with gzip) and it does add 4 bytes per link affected (which is not ALL links, but only links with bare URLs). I was getting fed up of the side bugs this left behind with respect to URLs in posts being copy/pasted and subsequently broken, and the fact that email notifications of posts or PMs would be broken by the stripping of the tags, so now we shorten URLs with CSS3 instead. There is a minor optimisation of the parse loop and a little other reduced code. Personally I think it's worth it (especially as I actually prefer the way the layout puts the ellipsis at the end rather than in the middle) (install.sql, Subs-BBC.php, index.css)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -1136,6 +1136,13 @@ table
 	:link, :visited
 		color: #789
 
+.bbc_link.raw extends .inline-block
+	white-space: nowrap
+	overflow: hidden
+	text-overflow: ellipsis
+	max-width: 24em
+	vertical-align: bottom
+
 .bbc_size
 	line-height: 1.4em
 
